// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegates Listing With Groups click on delegate item action 1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateItemContainer Card--interactive"
    tabindex="0"
  >
    <div
      class="Layout--horizontal StyledProps--main delegateItemSubcontainer"
    >
      <p
        class="StyledProps--font StyledProps--main"
        style="display: flex; align-items: center; width: 30px;"
      >
        <span
          class="bp3-icon bp3-icon-cube StyledProps--main StyledProps--padding-right-xsmall"
          icon="cube"
        >
          <svg
            data-icon="cube"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <desc>
              cube
            </desc>
            <path
              d="M1.953 4.481l7.41-4.02c.394-.215.88-.215 1.275 0l7.409 4.02L10 9.22 1.953 4.48zm-.817.68L9.5 10.085v9.281a1.316 1.316 0 01-.138-.064l-7.714-4.186A1.211 1.211 0 011 14.057v-8.35c0-.193.048-.38.136-.547zm17.728 0c.088.166.136.353.136.546v8.35c0 .438-.247.842-.648 1.06l-7.714 4.186c-.045.024-.091.046-.138.064v-9.281l8.364-4.926z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </p>
      <div
        class="Layout--horizontal StyledProps--main"
        data-testid="groupHostName1"
        style="width: 25%;"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            data-testid="Group1"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
            >
              Group1
              delegates.delegateInstances
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
          >
            groupHostName1
          </p>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main connectivity"
        style="width: 25%;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="display: inline-flex; flex-wrap: wrap;"
        />
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: calc(15% - 8px);"
      />
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: calc(15% - 8px);"
      >
        dummy date
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: calc(15% - 14px);"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            icon="full-circle"
          >
            <svg
              data-icon="full-circle"
              height="6"
              viewBox="0 0 16 16"
              width="6"
            >
              <desc>
                full-circle
              </desc>
              <path
                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          delegate.notConnected
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue400"
        >
          delegates.troubleshootOption
        </p>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 5%;"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="justify-content: flex-end;"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Options"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 4 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Listing With Groups render data 1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateItemContainer Card--interactive"
    tabindex="0"
  >
    <div
      class="Layout--horizontal StyledProps--main delegateItemSubcontainer"
    >
      <p
        class="StyledProps--font StyledProps--main"
        style="display: flex; align-items: center; width: 30px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
          data-icon="service-ecs"
        >
          <svg
            height="24"
            viewBox="0 0 14 14"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
              fill="#9d5025"
            />
            <path
              d="M2.6 1.3L.9.9V13l1.7-.5z"
              fill="#f58536"
            />
            <path
              d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
              fill="#9d5025"
            />
            <g
              fill="#f58536"
            >
              <path
                d="M4.3.5L2.6 0v14l1.7-.5z"
              />
              <path
                d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
              />
              <path
                d="M9 12l1.2-.4V2.4L9 2z"
              />
            </g>
            <path
              d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
              fill="#6b3a19"
            />
            <path
              d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
              fill="#9d5025"
            />
            <path
              d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
              fill="#6b3a19"
            />
            <path
              d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
              fill="#9d5025"
            />
            <path
              d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
              fill="#9d5025"
            />
            <path
              d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
              fill="#fbbf93"
            />
            <g
              fill="#f58536"
            >
              <path
                d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
              />
            </g>
          </svg>
        </span>
      </p>
      <div
        class="Layout--horizontal StyledProps--main"
        data-testid="groupHostName1"
        style="width: 25%;"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            data-testid="delegate-1"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
            >
              delegate-1
              delegates.delegateInstances
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
          >
            groupHostName1
          </p>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main connectivity"
        style="width: 25%;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="display: inline-flex; flex-wrap: wrap;"
        />
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: calc(15% - 8px);"
      >
        <div
          class="StyledProps--font StyledProps--main activity"
        >
          <div
            class="activityInsight"
          >
            <div
              style="flex: 0 0px;"
            />
            <div
              class="activityBlockInProgress"
              style="flex: 0 0px;"
            />
            <div
              class="activityBlockFailed"
              style="flex: 0 0px;"
            />
            <div
              class="activityBlockPerpetual"
              style="flex: 0 0px;"
            />
            <div
              class="activityBlockSuccessful"
              style="flex: 0 0px;"
            />
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: calc(15% - 8px);"
      >
        dummy date
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: calc(15% - 14px);"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
            icon="full-circle"
          >
            <svg
              data-icon="full-circle"
              height="6"
              viewBox="0 0 16 16"
              width="6"
            >
              <desc>
                full-circle
              </desc>
              <path
                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          connected
        </p>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 5%;"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="justify-content: flex-end;"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Options"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 4 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
